--- a/package.json
+++ b/package.json
@@ -9,9 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
+    "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "byte-size": "^8.1.0",
+    "cookie": "^0.5.0",
+    "cookies-js": "^1.2.3",
+    "firebase": "^9.8.2",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
+    "mongoose": "^6.4.0",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "next-connect": "^0.12.2",
+    "next-progress": "^2.2.0",
+    "nextjs-progressbar": "^0.0.14",
+    "notistack": "^2.0.5",
+    "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
+    "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-redux": "^8.0.2",
+    "react-video-thumbnail": "^0.1.3",
+    "video-react": "^0.15.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
