--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mui/icons-material": "^5.8.2",
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "byte-size": "^8.1.0",
     "cookie": "^0.5.0",
     "cookies-js": "^1.2.3",
