--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 MONGODB_URI = mongodb+srv://sohan:sohan123@cluster0.lm9lv.mongodb.net/?retryWrites=true&w=majority
 
 JWT_SECRET=JWT_SECRET
+
+BASE_URL = http://localhost:3000
