renaming base_url

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MONGODB_URI = mongodb+srv://sohan:sohan123@cluster0.lm9lv.mongodb.net/?retryWrit
 
 JWT_SECRET=JWT_SECRET
 
-BASE_URL = http://localhost:3000
+NEXT_PUBLIC_URL = http://localhost:3000
