--- a/package.json
+++ b/package.json
@@ -22,19 +22,17 @@
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
-    "mongoose": "^6.4.0",
-    "next": "12.1.6",
-    "next-connect": "^0.12.2",
+    "mongoose": "^5.13.2",
+    "next": "11.0.1",
+    "next-connect": "^0.10.1",
     "next-progress": "^2.2.0",
     "nextjs-progressbar": "^0.0.14",
     "notistack": "^2.0.5",
     "react": "^17.0.2",
     "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-google-login": "^5.2.2",
-    "react-redux": "^8.0.2",
-    "react-video-thumbnail": "^0.1.3",
-    "video-react": "^0.15.0"
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "eslint": "8.17.0",
